# AR_TryOn-Project

./: .gitignore  README.md
AR-TryOn-App/: .gitignore  README.md
AR-TryOn-App/admin-frontend/: .env  .gitignore  ARCHITECTURE.md  AR_SYSTEM_README.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
AR-TryOn-App/admin-frontend/src/: App.jsx  index.css  main.jsx
AR-TryOn-App/docs/: API_REFERENCE.md  ARCHITECTURE.md  QUICK_START.md
AR-TryOn-App/mern-backend/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  seed_users.js
AR-TryOn-App/mern-backend/docs/: DEV_RUN.md  postman_collection.json  swagger.json
AR-TryOn-App/mern-backend/src/: app.js  server.js
AR-TryOn-App/ml-service-2dto3d/: README_ZERO123.md  app.py  convert_weights.py  final_verification_test.py  main.py  package-lock.json  requirements.txt  run_post_8001.py  test_detailed.py  test_fixes.py  test_phase1_only.py  test_phases.py  test_post.py  validate_setup.py
AR-TryOn-App/ml-service-2dto3d/InstantMesh/: __init__.py  pyproject.toml
AR-TryOn-App/ml-service-2dto3d/InstantMesh/configs/: instant-mesh-base.yaml
AR-TryOn-App/ml-service-2dto3d/InstantMesh/instantmesh/: __init__.py
AR-TryOn-App/ml-service-2dto3d/InstantMesh/src/utils/: mesh_util.py
AR-TryOn-App/ml-service-2dto3d/InstantMesh/zero123plus/: pipeline.py
AR-TryOn-App/ml-service-2dto3d/nvdiffrast-main/: _nvdiffrast_c.cp310-win_amd64.pyd
AR-TryOn-App/python-ml/: infer.py  train.py
(+97 files in other folders)
